bug fixed the game over intervals

--- a/styles/main.css
+++ b/styles/main.css
@@ -51,7 +51,7 @@ h1{
   display: none;
 }
 .alienfire {
-  background-color: greenyellow;
+  content: url('../assets/FAVPNG_missile-weapon-drawing-silhouette-projectile_2uL5sVcE\ copy.png');
 }
 .play {
   display: none;
