last checks before presentation

--- a/styles/main.css
+++ b/styles/main.css
@@ -53,8 +53,8 @@ h1{
 .alienfire {
   content: url('../assets/FAVPNG_missile-weapon-drawing-silhouette-projectile_2uL5sVcE\ copy.png');
 }
-.play {
+/* .play {
   display: none;
   background-color: greenyellow;
 
-}
+} */
