--- a/styles/main.css
+++ b/styles/main.css
@@ -26,7 +26,7 @@ div.grid {
 div.box {
   width: 40px;
   height: 40px;
-  border: 1px dashed grey;
+  /* border: 1px dashed grey; */
 }
 span {
   position: absolute;
